# SDLBook

./: CMakeLists.txt  LICENSE  README.md  main.c
01-getting-started/: 01-hello-sdl.cpp  02-breaking-up-hello-sdl.cpp  CMakeLists.txt  Game.cpp  Game.h
02-drawing-in-sdl/: CMakeLists.txt  Game.cpp  Game.h  TextureManager.h  main.cpp
03-working-with-game-objects/: CMakeLists.txt  Enemy.cpp  Game.cpp  Game.h  GameObject.h  Player.cpp  Player.h  SDLGameObject.cpp  SDLGameObject.h  main.cpp
04-exploring-movement-and-input/: CMakeLists.txt  Enemy.cpp  Enemy.h  Game.cpp  Game.h  InputHandler.cpp  LoaderParams.h  Player.cpp  SDLGameObject.cpp  SDLGameObject.h  TextureManager.cpp  Vector2D.h  main.cpp
05-finite-state-machines/: AnimatedGraphic.cpp  AnimatedGraphic.h  CMakeLists.txt  Enemy.cpp  Enemy.h  Game.cpp  GameObject.h  GameOverState.cpp  GameOverState.h  GameState.h  GameStateMachine.h  InputHandler.cpp  LoaderParams.h  MenuButton.cpp  MenuButton.h  MenuState.cpp  MenuState.h  PauseState.cpp  PauseState.h  PlayState.cpp  PlayState.h  Player.cpp  Player.h  SDLGameObject.cpp  SDLGameObject.h  TextureManager.cpp  main.cpp
06-data-driven-design/: CMakeLists.txt  Game.cpp  Game.h  GameObject.h  GameObjectFactory.h  GameOverState.cpp  MenuButton.h  PauseState.cpp  PlayState.cpp  Player.h  TextureManager.h
07-creating-tile-maps/: AnimatedGraphic.cpp  AnimatedGraphic.h  CMakeLists.txt  Enemy.h  Game.cpp  Game.h  GameObjectFactory.cpp  GameState.h  InputHandler.h  Layer.h  Level.cpp  Level.h  LevelParser.cpp  LoaderParams.h  MenuButton.cpp  MenuState.h  ObjectLayer.cpp  ObjectLayer.h  PauseState.cpp  PauseState.h  PlayState.cpp  PlayState.h  SDLGameObject.cpp  SDLGameObject.h  StateParser.cpp  TextureManager.cpp  TextureManager.h  TileLayer.cpp  TileLayer.h  main.cpp
07-creating-tile-maps/assets/: blocks2.tsx  test.xml
08-creating-alien-attack/: AnimatedGraphic.h  Bullet.h  BulletHandler.cpp  BulletHandler.h  CMakeLists.txt  Collision.h  Enemy.cpp  Enemy.h  Game.cpp  Game.h  GameObject.h  GameOverState.cpp  GameOverState.h  GameStateMachine.cpp  Level.h  LevelParser.cpp  LevelParser.h  LoaderParams.h  MainMenuState.cpp  MainMenuState.h  MenuButton.h  PlayState.h  Player.cpp  Player.h  ScrollingBackground.cpp  ScrollingBackground.h  ShooterObject.cpp  ShooterObject.h  SoundManager.cpp  SoundManager.h  StateParser.h  TextureManager.cpp  TextureManager.h  TileLayer.h
08-creating-alien-attack/assets/: map.tmx
chapter1/: Game.cpp  Game.h  Makefile  hello-world-1.cpp  hello-world-2.cpp
chapter2/: Game.cpp  Game.h  Makefile  TextureManager.cpp  TextureManager.h
chapter3/: Enemy.cpp  Enemy.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Makefile  Player.cpp  Player.h  SDLGameObject.cpp  SDLGameObject.h  main.cpp
chapter4/: Enemy.cpp  Enemy.h  Game.cpp  Game.h  InputHandler.cpp  InputHandler.h  Makefile  Player.cpp  Player.h  Vector2D.h  main.cpp
chapter5/: AnimatedGraphic.cpp  AnimatedGraphic.h  Enemy.cpp  Game.cpp  Game.h  GameOverState.cpp  GameOverState.h  GameState.h  GameStateMachine.cpp  GameStateMachine.h  InputHandler.cpp  InputHandler.h  LoaderParams.h  Makefile  MenuButton.cpp  MenuButton.h  MenuState.cpp  MenuState.h  PauseState.cpp  PauseState.h  PlayState.cpp  PlayState.h  Player.cpp  SDLGameObject.cpp  SDLGameObject.h  TextureManager.cpp  TextureManager.h
